refactor: 에러 메시지를 ErrorMessage Enum으로 분리